<resources>
    <string name="app_name">S. R. Citas</string>
    <string name="label_login">Inicio de sesión</string>
    <string name="label_email">Correo</string>
    <string name="label_password">Contraseña</string>
    <string name="btn_login">Ingresar</string>
    <string name="label_go_register">¿Aún no te has registrado?</string>
    <string name="label_register">Registro</string>
    <string name="label_name">Nombre completo</string>
    <string name="btn_register">CONFIRMAR REGISTRO</string>
    <string name="label_go_to_login">¿Ya tienes una cuenta?</string>
    <string name="btn_logout">Cerrar Sesión</string>
    <string name="label_welcome">Bienvenido</string>
    <string name="btn_create_appointments">Reservar Cita</string>
    <string name="btn_my_appointments">Mis citas</string>
    <string name="label_create_appointments">Reservar cita</string>
    <string name="label_description">Descripción</string>
    <string name="label_specialty">Especialidad</string>
    <string name="label_type">Tipo de cita</string>
    <string name="type1">Consulta</string>
    <string name="type2">Examen</string>
    <string name="type3">Operación</string>
    <string name="btn_next">Siguiente</string>
    <string name="label_doctor">Médico</string>
    <string name="label_scheduled_Date">Fecha</string>
    <string name="btn_confirm">Confirmar</string>

    <string name="date_format">%1$d-%2$s-%3$s</string>

    <string name="item_appointment_id">Cita Médica %1$d</string>
    <string name="item_appointment_date">Atencion el día %1$s</string>
    <string name="item_appointment_time">A horas %1$s </string>
    <string name="label_my_appointments">Mis citas médicas</string>
    <string name="press_back_again">Presione una vez más para salir</string>
    <string name="dialog_exit_tittle">¿Estás seguro que deseas salir?</string>
    <string name="dialog_exit_message">Si abandonas el registro, los datos que habias ingresado se perderan</string>
    <string name="dialog_appointment_exit_positive">Si, deseo salir</string>
    <string name="dialog_appointment_exit_negative">Continuar registro</string>
    <string name="label_scheduled_time">Hora de la cita</string>
    <string name="label_confirm_appointment_data">Datos de la cita</string>
    <string name="validate_date_appointment">Es necesario selecionar una fecha</string>
    <string name="validate_time_appointment">Es necesario seleccionar una hora para la cita</string>

</resources>
