<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MenuActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_horizontal"
        android:paddingTop="12dp"
        android:text="@string/label_welcome"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btnCreateAppointment"
        style="@style/MenuButtom"
        android:layout_width="match_parent"
        android:layout_marginTop="12dp"
        android:drawableStart="@drawable/ic_register_appointments"
        android:text="@string/btn_create_appointments" />

    <Button
        android:id="@+id/btnMyAppointments"
        style="@style/MenuButtom"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        android:drawableStart="@drawable/ic_my_appointments"
        android:text="@string/btn_my_appointments" />


    <Button
        android:id="@+id/btnLogout"
        style="@style/MenuButtom"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        android:drawableStart="@drawable/ic_logout"
        android:text="@string/btn_logout" />
</LinearLayout>