<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".CreateAppointmentActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_horizontal"
        android:paddingTop="12dp"
        android:text="@string/label_create_appointments"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvStep1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:contentPadding="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_horizontal"
                android:paddingTop="12dp"
                android:text="@string/label_description"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <EditText
                android:id="@+id/edDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_horizontal"
                android:paddingTop="12dp"
                android:text="@string/label_specialty"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <Spinner
                android:id="@+id/spinnerSpecialties"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </Spinner>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_horizontal"
                android:paddingTop="12dp"
                android:text="@string/label_type"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="vertical">

                <RadioButton

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type1" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type2" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type3" />
            </RadioGroup>

            <Button
                android:id="@+id/btnNext"
                style="@style/MenuButtom"
                android:layout_width="match_parent"
                android:layout_marginTop="12dp"
                android:drawableEnd="@drawable/ic_next_screen"
                android:text="@string/btn_next" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvStep2"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:contentPadding="12dp">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center_horizontal"
                    android:paddingTop="12dp"
                    android:text="@string/label_doctor"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <Spinner
                    android:layout_width="match_parent"
                    android:id="@+id/spinnerDoctors"
                    android:layout_height="wrap_content">

                </Spinner>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center_horizontal"
                    android:paddingTop="12dp"
                    android:text="@string/label_scheduled_Date"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:orientation="vertical">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="8:00 AM" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="8:30 AM" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="9:00 AM" />
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="8:00 AM" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="8:30 AM" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="9:00 AM" />
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="8:00 AM" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="8:30 AM" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="9:00 AM" />
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="8:00 AM" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="8:30 AM" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="9:00 AM" />
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="8:00 AM" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="8:30 AM" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="9:00 AM" />
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="8:00 AM" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="8:30 AM" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="9:00 AM" />
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="8:00 AM" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="8:30 AM" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="9:00 AM" />
                </RadioGroup>

                <Button
                    android:id="@+id/btnConfirmAppointment"
                    style="@style/MenuButtom"
                    android:layout_width="match_parent"
                    android:layout_marginTop="12dp"
                    android:drawableEnd="@drawable/ic_confirm"
                    android:text="@string/btn_confirm" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.cardview.widget.CardView>
</LinearLayout>